--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiki-template",
+  "name": "chestcommand-wiki-cn",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,17 +14,26 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "^3.6.3",
+    "@docusaurus/faster": "^3.6.3",
+    "@docusaurus/plugin-content-docs": "^3.6.3",
+    "@docusaurus/plugin-debug": "^3.6.3",
+    "@docusaurus/plugin-pwa": "^3.6.3",
+    "@docusaurus/plugin-sitemap": "^3.6.3",
+    "@docusaurus/preset-classic": "^3.6.3",
+    "@docusaurus/theme-common": "^3.6.3",
     "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-image-zoom": "^2.0.0",
+    "docusaurus-plugin-sass": "^0.2.5",
+    "pnpm": "^9.13.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "^3.6.3"
   },
   "browserslist": {
     "production": [
@@ -39,6 +48,7 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
-  }
+    "node": ">=18.0"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
